src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-258.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ct\")"
---
items:
  - loc: "#units ct"
    locs:
      directive: "#units"
    options:
      - loc: ct
        option: CompassAndTape
    type: UnitsDirective
