src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-259.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#Units CT;comment\")"
---
items:
  - comment: comment
    loc: "#Units CT"
    locs:
      comment: ;comment
      directive: "#Units"
    options:
      - loc: CT
        option: CompassAndTape
    type: UnitsDirective
