src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-26.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units f\")"
---
items:
  - loc: "#units f"
    locs:
      directive: "#units"
    options:
      - loc: f
        option: DistanceUnit
        unit: Feet
    type: UnitsDirective
