src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-261.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units Rect;comment\")"
---
items:
  - comment: comment
    loc: "#units Rect"
    locs:
      comment: ;comment
      directive: "#units"
    options:
      - loc: Rect
        option: Rectilinear
    type: UnitsDirective
