src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-262.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units Rect=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units Rect="
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: Rect=
              locs:
                correction: ""
                option: Rect
              option: RectilinearNorthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing angle
    severity: Error
