src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-265.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units Rect=-3.8g\")"
---
items:
  - loc: "#units Rect=-3.8g"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Grads
          value: -3.8
        loc: Rect=-3.8g
        locs:
          correction: "-3.8g"
          option: Rect
        option: RectilinearNorthCorrection
    type: UnitsDirective
