src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-267.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units Rect=+3.8q\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units Rect=+3.8q"
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: Rect=+3.8q
              locs:
                correction: +3.8q
                option: Rect
              option: RectilinearNorthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDANGLEUNIT
    loc: q
    message: Invalid angle unit
    severity: Error
